--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="WebAppMaker">
 <head>
     <meta charset="UTF-8">
+    <script src="app.js"></script>
+    <script src=""></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Assignment Home Page</title>
 </head>
 <body>
     <h1>Assignment Home Page</h1>
+
+    <h6>First Assignment:
+    <a href="login.html"> click here</a>
+    </h6>
 </body>
 </html>
