--- a/public/assignment/Widget/widget-list.html
+++ b/public/assignment/Widget/widget-list.html
@@ -62,7 +62,8 @@
                 </a>
             </div>
             <div class="intro">
-                <img class="img-responsive" style="width: 100%" alt="Responsive image" src="../../../trolltunga.jpg" height="300" width="1000"/>
+                <img class="img-responsive" style="width: 100%" alt="Responsive image"
+                     src="trolltunga.jpg" height="300" width="1000"/>
             </div>
         </li>
 
@@ -140,7 +141,7 @@
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="row container-fluid">
-        <div class="col-xs-3 col-md-1 col-lg-1 col-sm-3">
+        <div class="col-xs-3 col-md-2 col-lg-2 col-sm-3">
             <p class="navbar-text pull-left">
                 <a href="#" class="nav-link">
                     <span class="glyphicon glyphicon-play"></span>
@@ -153,7 +154,7 @@
             </p>
         </div>
 
-        <div class="col-xs-2 col-xs-offset-7 col-md-1 col-md-offset-10 col-lg-1 col-lg-offset-10 col-sm-1 col-sm-offset-8">
+        <div class="col-xs-2 col-xs-offset-7 col-md-1 col-md-offset-9 col-lg-1 col-lg-offset-9 col-sm-1 col-sm-offset-8">
         <div class="navbar-text text-center">
                 <a href="../profile.html" class="nav-link">
                     <span class="glyphicon glyphicon-user"></span>
