--- a/public/assignment/Pages/page-list.html
+++ b/public/assignment/Pages/page-list.html
@@ -5,7 +5,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="../css/style.css">
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -17,9 +17,9 @@
                 </a>
             </div>
             <a class="navbar-brand pull-left color-white" href="#">
-                <font color="white">
+                <div class="color-white">
                     Pages
-                </font>
+                </div>
             </a>
             <p class="navbar-text pull-right">
                 <a href="page-new.html" class="nav-link right-side-button">
