--- a/public/assignment/Website/website-edit.html
+++ b/public/assignment/Website/website-edit.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="../css/style1.css">
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
         <div >
-            <div class="navbar-text pull-left pb-chevron"  style="margin-left: 5px;">
+            <div class="navbar-text pull-left pb-chevron">
                 <a href="website-list.html">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
@@ -19,11 +19,11 @@
     <div class="row container-fluid">
         <div class="col-lg-4 col-md-4 hidden-xs hidden-sm">
             <div class="navbar-header navbar-brand pull-left">
-                <font color="white">
+                <div class="color-white">
                     Websites
-                </font>
+                </div>
             </div>
-            <div class="navbar-text pull-right hidden-xs hidden-sm" style="margin-right: 30px;">
+            <div class="navbar-text pull-right hidden-xs hidden-sm" class="pb-hidden-margin">
                 <a href="website-new.html">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
@@ -36,9 +36,9 @@
                 </a>
             </div>
             <div class="navbar-header navbar-brand">
-                <font color="white">
+                <div class="color-white">
                     Edit Website
-                </font>
+                </div>
             </div>
         </div>
     </div>
