--- a/public/assignment/Website/website-new.html
+++ b/public/assignment/Website/website-new.html
@@ -10,7 +10,7 @@
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div >
-        <div class="navbar-text pull-left pb-chevron"  style="margin-left: 5px;">
+        <div class="navbar-text pull-left pb-chevron">
             <a href="website-list.html">
                 <span class="glyphicon glyphicon-chevron-left"></span>
             </a>
@@ -19,28 +19,26 @@
     <div class="row container-fluid">
         <div class="col-lg-4 col-md-4 hidden-xs hidden-sm">
             <div class="navbar-header navbar-brand pull-left">
-                <font color="white">
+                <div class="color-white">
                     Websites
-                </font>
+                    </div>
             </div>
-            <div class="navbar-text pull-right hidden-xs hidden-sm" style="margin-right: 30px;">
+            <div class="navbar-text pull-right hidden-xs hidden-sm pb-hidden-margin">
                 <a href="#">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </div>
         </div>
         <div class="col-xs-11 col-sm-11 col-lg-7 col-md-7">
-            <div class="navbar-text pull-right" style="margin-right: 0px;">
+            <div class="navbar-text pull-right">
                 <a href="website-list.html">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </div>
-            <div class="navbar-header">
-                <a class="navbar-brand pull-left" href="#">
-                    <font color="white">
-                    Edit Website
-                    </font>
-                </a>
+            <div class="navbar-header navbar-brand pull-left">
+                <div class="color-white">
+                    New Website
+                </div>
             </div>
         </div>
     </div>
