--- a/public/assignment/Widget/widget-image.html
+++ b/public/assignment/Widget/widget-image.html
@@ -13,15 +13,15 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-text pull-left pb-chevron" style="margin-left: 0px;">
+            <div class="navbar-text pull-left pb-chevron" >
                 <a href="widget-list.html">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="glyphicon glyphicon-chevron-left, maximum-scale=1.0, user-scalable=no"></span>
                 </a>
             </div>
             <a class="navbar-brand pull-left" href="#">
-                <font color="white">
+                <div class="color-white">
                 Widget Edit
-                </font>
+                </div>
             </a>
             <p class="navbar-text pull-right">
                 <a href="widget-list.html" class="nav-link right-side-button">
