--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -13,9 +13,9 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">
-                <font color="white">
+                <div class="color-white">
                 Profile
-                </font>
+                </div>
             </a>
             <p class="navbar-text pull-right">
 
