--- a/public/assignment/Pages/page-edit.html
+++ b/public/assignment/Pages/page-edit.html
@@ -6,7 +6,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -19,9 +19,9 @@
                 </a>
             </div>
             <a class="navbar-brand pull-left color-white" href="#">
-                <font color="white">
+                <div class="color-white">
                     Edit Page
-                </font>
+                </div>
             </a>
             <p class="navbar-text pull-right">
                 <a href="page-list.html" class="nav-link right-side-button">
