--- a/public/assignment/Widget/widget-chooser.html
+++ b/public/assignment/Widget/widget-chooser.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
@@ -12,15 +12,15 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-text pull-left pb-chevron" style="margin-left: 0px;">
+            <div class="navbar-text pull-left pb-chevron" >
                 <a href="widget-list.html">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
             </div>
             <a class="navbar-brand pull-left color-white" href="#">
-                <font color="white">
+                <div class="color-white">
                 Choose Widget
-                </font>
+                </div>
             </a>
 
         </div>
