--- a/public/assignment/Widget/widget-heading.html
+++ b/public/assignment/Widget/widget-heading.html
@@ -6,22 +6,22 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <div class="navbar-text pull-left pb-chevron" style="margin-left: 0px;">
+            <div class="navbar-text pull-left pb-chevron" >
                 <a href="widget-list.html">
                     <span class="glyphicon glyphicon-chevron-left"></span>
                 </a>
             </div>
             <a class="navbar-brand pull-left" href="#">
-                <font color="white">
+                <div class="color-white">
                 Widget Edit
-                </font>
+                </div>
             </a>
             <p class="navbar-text pull-right">
                 <a href="widget-list.html" class="nav-link right-side-button">
