--- a/public/assignment/Widget/widget-list.html
+++ b/public/assignment/Widget/widget-list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <title>Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="../css/style.css">
 
 </head>
@@ -18,9 +18,9 @@
                 </a>
             </div>
             <a class="navbar-brand pull-left color-white" href="#">
-                <font color="white">
+                <div class="color-white">
                     Widgets
-                </font>
+                </div>
             </a>
             <p class="navbar-text pull-right">
                 <a href="widget-chooser.html" class="nav-link right-side-button">
@@ -62,8 +62,8 @@
                 </a>
             </div>
             <div class="intro">
-                <img class="img-responsive" style="width: 100%" alt="Responsive image"
-                     src="trolltunga.jpg" height="300" width="1000"/>
+                <img width="100%" class="img-responsive" alt="Responsive image"
+                     src="trolltunga.jpg"/>
             </div>
         </li>
 
@@ -147,7 +147,7 @@
                     <span class="glyphicon glyphicon-play"></span>
                 </a>
             </p>
-            <p class="navbar-text pull-left" style="margin-left: 7px">
+            <p class="navbar-text pull-left eye-margin">
                 <a href="#" class="nav-link">
                     <span class="glyphicon glyphicon-eye-open"></span>
                 </a>
