--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -33,19 +33,19 @@
             <br>
             <div class="form-group">
                 <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" placeholder="Username">
+                <input value="pb-1193" type="text" class="form-control" id="username" placeholder="Username">
             </div>
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
+                <input value="panktibhalani@gmail.com" type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
             </div>
             <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input type="text" class="form-control" id="first-name" placeholder="Alice">
+                <input value="Pankti" type="text" class="form-control" id="first-name" placeholder="Alice">
             </div>
             <div class="form-group">
                 <label for="last-name">Last Name</label>
-                <input type="text" class="form-control" id="last-name" placeholder="Wonderland">
+                <input value="Bhalani" type="text" class="form-control" id="last-name" placeholder="Wonderland">
             </div>
         </form>
 
