--- a/public/assignment/Website/website-new.html
+++ b/public/assignment/Website/website-new.html
@@ -47,7 +47,6 @@
 <div class="container-fluid">
     <div class="span6">
         <div  class="pb-list mycontent-left col-sm-4 hidden-xs hidden-sm">
-            <br>
             <ul class="list-group">
                 <li class="list-group-item">Address Book App
                     <p class="pull-right">
@@ -88,12 +87,11 @@
                 <br>
                 <div class="form-group">
                     <label for="exampleInputName">Name</label>
-                    <input value="Blogger" type="text" class="form-control" id="exampleInputName" placeholder="Name">
+                    <input type="text" class="form-control" id="exampleInputName" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputTextArea">Password</label>
-                    <textarea class="form-control" rows="8" id="exampleInputTextArea" placeholder="Description">Blogger is a blog-publishing service that allows multi-user blogs with time-stamped entries. It was developed by Pyra Labs, which was bought by Google in 2003. Generally, the blogs are hosted by Google at a subdomain of blogspot.com. Blogs can also be hosted in the registered custom domain of the blogger (like www.example.com).[4] A user can have up to 100 blogs per account.
-                    </textarea>
+                    <label for="exampleInputTextArea">Description</label>
+                    <textarea placeholder="Description" class="form-control" rows="8" id="exampleInputTextArea"></textarea>
                 </div>
 
             </form>
