--- a/public/assignment/Widget/widget-image.html
+++ b/public/assignment/Widget/widget-image.html
@@ -41,7 +41,7 @@
         </div>
         <div class="form-group">
             <label for="exampleInputTitle">Text</label>
-            <input type="text" value="vchvshjdcbj cbjbcjbwcjb bcijsb" class="form-control" id="exampleInputTitle" placeholder="Page Title">
+            <input type="text" value="Image-Name" class="form-control" id="exampleInputTitle" placeholder="Page Title">
         </div>
         <div class="form-group">
             <label for="exampleInputURL">URL</label>
