--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -2,17 +2,40 @@
 <html lang="en" ng-app="WebAppMaker">
 <head>
     <meta charset="UTF-8">
-    <script src="app.js"></script>
-    <script src=""></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="stylesheet" href="css/style.css" />
+    <title>Title</title>
 
-    <title>Assignment Home Page</title>
+    <script src="js/angular.js"></script>
+    <script src="js/angular-route.js"></script>
+    <script src="app.js"></script>
+    <script src="config.js"></script>
+
+    <script src="services/user.service.client.js"></script>
+    <script src="Views/User/Controller/login.controller.client.js"></script>
+    <script src="Views/User/Controller/register.controller.client.js"></script>
+    <script src="Views/User/Controller/profile.controller.client.js"></script>
+
+    <script src="services/website.service.client.js"></script>
+    <script src="Views/Website/Controller/webiste-list.controller.client.js"></script>
+    <script src="Views/Website/Controller/website-new.controller.client.js"></script>
+    <script src="Views/Website/Controller/website-edit.controller.client.js"></script>
+
+    <script src="services/pages.service.client.js"></script>
+    <script src="Views/Pages/controller/page-list.controller.client.js"></script>
+    <script src="Views/Pages/controller/page-new.controller.client.js"></script>
+    <script src="Views/Pages/controller/page-edit.controller.client.js"></script>
+
+    <script src="services/widget.service.client.js"></script>
+    <script src="Views/Widget/controllers/widget-list.controller.client.js"></script>
+    <script src="Views/Widget/controllers/widget-edit.controller.client.js"></script>
+    <script src="Views/Widget/controllers/widget-chooser.controller.client.js"></script>
+
+
 </head>
 <body>
-    <h1>Assignment Home Page</h1>
-
-    <h6>First Assignment:
-    <a href="login.html"> click here</a>
-    </h6>
+<div ng-view>
+</div>
 </body>
 </html>
