--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -5,12 +5,19 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="css/style.css" />
+
     <title>Title</title>
 
-    <script src="js/angular.js"></script>
-    <script src="js/angular-route.js"></script>
+    <script src="../js/vendor/jquery-3.1.1.min.js"></script>
+    <script src="../js/vendor/jquery-ui.min.js"></script>
+
+    <script src="../js/angular.js"></script>
+    <script src="../js/angular-route.js"></script>
+
     <script src="app.js"></script>
     <script src="config.js"></script>
+
+
 
     <script src="services/user.service.client.js"></script>
     <script src="Views/User/Controller/login.controller.client.js"></script>
@@ -31,6 +38,8 @@
     <script src="Views/Widget/controllers/widget-list.controller.client.js"></script>
     <script src="Views/Widget/controllers/widget-edit.controller.client.js"></script>
     <script src="Views/Widget/controllers/widget-chooser.controller.client.js"></script>
+
+    <script src="directives/wbdv-sortable.js"></script>
 
 
 </head>
