--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -35,9 +35,11 @@
     <script src="Views/Pages/controller/page-edit.controller.client.js"></script>
 
     <script src="services/widget.service.client.js"></script>
+    <script src="services/flickr.service.client.js"></script>
     <script src="Views/Widget/controllers/widget-list.controller.client.js"></script>
     <script src="Views/Widget/controllers/widget-edit.controller.client.js"></script>
     <script src="Views/Widget/controllers/widget-chooser.controller.client.js"></script>
+    <script src="Views/Widget/controllers/flickr.controller.client.js"></script>
 
     <script src="directives/wbdv-sortable.js"></script>
 
