--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet" integrity="sha384-+ENW/yibaokMnme+vBLnHMphUYxHs34h9lpdbSLuAwGkOKFRl4C34WkjazBtb7eT" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="homepage.css">
     <title>Web Dev Course Home Page</title>
 </head>
 <body>
-    <h1>Web Dev Course Home Page</h1>
-    <p>
-        Customize this home page to your linking.
-    </p>
-    <h2>Required links</h2>
-    <ul>
-        <li>
-            <a href="project/index.html">Project</a>
-        </li>
-        <li>
-            <a href="assignment/#/login">Assignment</a>
-        </li>
-        <li>
-            <a href="test/index.html">Test MongoDB</a>
-        </li>
-        <li>
-            <a href="https://github.com/pankti11/bhalani-pankti-webdev">
-                Your public repository at GitHub.com</a>
-        </li>
-    </ul>
+<div class="container-fluid">
+    <div class="row text-center" style="background-color: #ecf0f1">
+        <div class="pull-left">
+
+            <img class="img-responsive" alt="Responsive image" src="logo-mean.png" height="20%" width="50%"/>
+        </div>
+    </div>
+<br>
+    <br>
+
+    <div class="row">
+        <div class="col-sm-offset-2 col-sm-10" >
+            <div class="col-md-5 card">
+                <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                    <div class="pull-left">
+                        <h3 class="card-title">Project</h3>
+                    </div>
+                    <div class="pull-right">
+                        <a href="http://ec2-54-218-218-127.us-west-2.compute.amazonaws.com:3000/#/">
+                        <i class="fa fa-anchor fa-3x" style="margin-top: 15px" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h4>Resume Builder:</h4>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        Build Profile Once! Create resumes with just a click! Enjoy ...
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 card">
+                <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <div class="pull-left">
+
+                            <h3 class="card-title">Assignment</h3>
+
+                        </div>
+                        <div class="pull-right">
+                            <a href="assignment/#/login">
+                            <i class="fa fa-university fa-3x" style="margin-top: 15px" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h4>Web App Maker:</h4>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        Create different kind of awesome mobile friendly Website by creating widgets !!
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 card">
+                <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <div class="pull-left">
+                            <h3 class="card-title">Test Mongo:</h3>
+                        </div>
+                        <div class="pull-right">
+                            <a href="test/index.html">
+                            <i class="fa fa-database fa-3x" style="margin-top: 20px" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h4>Testing:</h4>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        test the connection of mongo wiht MLab ! DO IT !!!
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-5 card">
+                <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <div class="pull-left">
+                            <h3 class="card-title">Project Git Hub:</h3>
+                        </div>
+                        <div class="pull-right">
+                            <a href="https://github.com/savanpatel/resbuilder">
+                            <i class="fa fa-github fa-4x" style="margin-top: 15px" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h4>URL:</h4>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        Visit the repo to see the awesome project !
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 card">
+                <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <div class="pull-left">
+                            <h3 class="card-title">Assignment Git:</h3>
+                        </div>
+                        <div class="pull-right">
+                            <a href="https://github.com/pankti11/bhalani-pankti-webdev">
+                                <i class="fa fa-github fa-4x" style="margin-top: 15px" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h4>URL:</h4>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        Visit the repo to see the awesome Assignment I have worked on !
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5 card">
+                <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <div class="pull-left">
+                            <h3 class="card-title">API :</h3>
+                        </div>
+                        <div class="pull-right">
+                            <a href="https://github.com/pankti11/bhalani-pankti-webdev">
+                                <i class="fa fa-github fa-4x" style="margin-top: 15px" aria-hidden="true"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h7 style="color:#d35400 ">Testing:</h7>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        <h4>API URL</h4>
+                    </div>
+                    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+                        Please visit API for the project !
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row text-center">
+        <img src="meanstack.png"  class="img-responsive" alt="Responsive image" height="200" width="1200"/>
+    </div>
+</div>
 </body>
 </html>
