project link correct

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                         <h3 class="card-title">Project</h3>
                     </div>
                     <div class="pull-right">
-                        <a href="http://ec2-54-218-218-127.us-west-2.compute.amazonaws.com:3000/#/">
+                        <a href="http://ec2-52-34-186-114.us-west-2.compute.amazonaws.com/#/">
                         <i class="fa fa-anchor fa-3x" style="margin-top: 15px" aria-hidden="true"></i>
                         </a>
                     </div>
