--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,9 @@
                 <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                     <div class="pull-left">
+                        <a href="http://ec2-52-34-186-114.us-west-2.compute.amazonaws.com/#/">
                         <h3 class="card-title">Project</h3>
+                        </a>
                     </div>
                     <div class="pull-right">
                         <a href="http://ec2-52-34-186-114.us-west-2.compute.amazonaws.com/#/">
@@ -49,8 +51,9 @@
                 <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <div class="pull-left">
-
+                            <a href="assignment/#/login">
                             <h3 class="card-title">Assignment</h3>
+                            </a>
 
                         </div>
                         <div class="pull-right">
@@ -70,8 +73,11 @@
             <div class="col-md-5 card">
                 <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+
                         <div class="pull-left">
+                            <a href="test/index.html">
                             <h3 class="card-title">Test Mongo:</h3>
+                            </a>
                         </div>
                         <div class="pull-right">
                             <a href="test/index.html">
@@ -92,7 +98,9 @@
                 <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <div class="pull-left">
+                            <a href="https://github.com/savanpatel/resbuilder">
                             <h3 class="card-title">Project Git Hub:</h3>
+                            </a>
                         </div>
                         <div class="pull-right">
                             <a href="https://github.com/savanpatel/resbuilder">
@@ -112,7 +120,9 @@
                 <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <div class="pull-left">
+                            <a href="https://github.com/pankti11/bhalani-pankti-webdev">
                             <h3 class="card-title">Assignment Git:</h3>
+                            </a>
                         </div>
                         <div class="pull-right">
                             <a href="https://github.com/pankti11/bhalani-pankti-webdev">
@@ -132,22 +142,24 @@
                 <div class="col-md-4 col-sm-4 col-xs-4 card-block custom-card-v2 custom-card-2" style="background:#d35400; color:white">
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <div class="pull-left">
-                            <h3 class="card-title">API :</h3>
+                            <a href="https://www.youtube.com/watch?edit=vd&v=h-8USnYsqf0">
+                            <h3 class="card-title">Youtube Link :</h3>
+                            </a>
                         </div>
                         <div class="pull-right">
-                            <a href="https://github.com/pankti11/bhalani-pankti-webdev">
+                            <a href="https://www.youtube.com/watch?edit=vd&v=h-8USnYsqf0">
                                 <i class="fa fa-github fa-4x" style="margin-top: 15px" aria-hidden="true"></i>
                             </a>
                         </div>
                     </div>
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        <h7 style="color:#d35400 ">Testing:</h7>
+                        <h7 style="color:#d35400 ">Project:</h7>
                     </div>
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
                         <h4>API URL</h4>
                     </div>
                     <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-                        Please visit API for the project !
+                        Please visit the youtube video to get familiarize with the Project i have worked on !
                     </div>
                 </div>
             </div>
